Fixes logo animation on mobile devices
This changes the logo animation on mobile devices to fade in, scale up,
and move up from the bottom into position at load time. The animation is
less complicated than the desktop version and is working in the dev
bucket.

--- a/styles.css
+++ b/styles.css
@@ -519,7 +519,18 @@ a {
         right: 0;
         top: -1%;
         opacity: 0.3;
-        animation: none;
+        animation: logoAnimation 3200ms ease;
+    }
+
+    @keyframes logoAnimation {
+        0% {
+            opacity: 0;
+            transform: translateY(400%) scale(0);
+        }
+        100% {
+            opacity: 0.3;
+            transform: translateY(0) scale(1);
+        }
     }
 
     .home-section h1 {
